k8s/envs/dev1/annotate-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fund-transfer
  annotations:
    alb.ingress.kubernetes.io/auth-idp-oidc: '{"issuer": "https://cognito-idp.us-west-2.amazonaws.com/us-west-2_8GAesOyAi", "authorizationEndpoint": "https://vino9.auth.us-west-2.amazoncognito.com/oauth2/authorize", "tokenEndpoint": "https://vino9.auth.us-west-2.amazoncognito.com/oauth2/token", "userInfoEndpoint": "https://vino9.auth.us-west-2.amazoncognito.com/oauth2/userInfo", "secretName": "oidc-cognito-secret" }'
